# fe2-intro

./: .gitignore  CMakeLists.txt  README.md
amiga/: build-ami-gcc.sh  build-lha  readme.txt
data/: intro-overrides.txt  model-overrides.txt
docs/: overview.md
libs/SDL2-2.0.9/test/: CMakeLists.txt
scripts/: build-amiga-gcc.sh  build-amiga-vbcc.sh  build-wasm.sh  build_wasm.sh  wasmserver.py
scripts/amiga/: build-lha  readme.txt
src/: assets.c  assets.h  audio.c  audio.h  builddata.c  builddata.h  fe2-intro.html  fintro.c  fintro.h  fmath.c  fmath.h  fmath_test.c  main-amiga.c  main-fintro.c  main-sdl.c  mlib.c  mlib.h  modelcode.c  modelcode.h  mtest.h  render.c  render.h  renderinternal.h
src/platform/: basicalloc.c  basicalloc.h  mlib-file-stdlib.c  mlib-log-stdlib.c
src/platform/amiga/: amigahw.h  main-amiga.c  mlib-amiga.c
src/platform/enscripten/: fe2-intro.html
src/platform/imgui/: annotation.cpp  annotation.h  builddata.c  drawinfo.cpp  drawinfo.h  main-imgui.cpp  mcpplib.cpp  mcpplib.h  mini.c  mini.h  modelviewer.cpp  modelviewer.h
src/platform/imgui/imgui/: imconfig.h  imgui_impl_sdl.cpp  imgui_impl_sdl2.cpp  imgui_internal.h  imgui_memory_editor.h
src/platform/sdl/: main-sdl.c  mlib-sdl.c
src/platform/wasm/: fe2-intro.html  float.h  main-wasm.c  manifest.json  math.h  mlib-wasm.c  sprintf.c  stdio.h  stdlib.h  string.h  wasm_funcs.h
wasm/: build.sh
